index page updated

--- a/index.html
+++ b/index.html
@@ -23,7 +23,22 @@
 
 <body>
 
+<h2>Connectome</h2>
+This web-based tool allows to visualize the Connectome that describes how the regions of the brain are interconnected.
+Particularly, the tools enable to perform the exploration of the intrinsic geometry of the brain, by letting the user
+switch quickly different topological spaces where the connectome is embedded.
+With a simple and easy-to-use interface, users can explore all the connections with a edge-on-demand technique and focus on
+very specific area by switching on and off regions of the brain. Simple analytics such as nodal strength and shortest path
+trees can be computed on the fly. This tool has been developed with virtual reality in mind and it is compatible with
+Head Mounted Displays such as Oculus Rift (both DK1 and DK2).
+
+<h3>Acknoledgement</h3>
+The tool was entirely developed by Giorgio Conte who belongs to the <a href="https://www.evl.uic.edu/creativecoding/">Creative Coding Research Group</a>, directed by Prof.
+Angus Forbes. The research group is part of the <a href="https://www.evl.uic.edu">Electronic Visualization Lab (EVL)</a>  at University of Illinois at Chicago (UIC).
+This research is being done in collaboration with Alex Leow, Olusola Ajilore, and Allen Ye, all belonging to UIC Department of Psychiatry.
+
 <h2>Upload your Data <a href="upload.html">here</a> </h2>
+
 
 <h2>Structural Connectome</h2>
 
