index page updated

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 <h2>Connectome</h2>
-This web-based tool allows to visualize the Connectome that describes how the regions of the brain are interconnected.
+This tool allows to visualize the Connectome that describes how the regions of the brain are interconnected.
 Particularly, the tools enable to perform the exploration of the intrinsic geometry of the brain, by letting the user
 switch quickly different topological spaces where the connectome is embedded.
 With a simple and easy-to-use interface, users can explore all the connections with a edge-on-demand technique and focus on
