--- a/index.html
+++ b/index.html
@@ -40,115 +40,12 @@ This research is being done in collaboration with Alex Leow, Olusola Ajilore, an
 <h2>Upload your Data <a href="upload.html">here</a> </h2>
 
 
-<h2>Structural Connectome</h2>
+<h2>Demo</h2>
 
 <ul>
     <li>
-        <a onclick="location.href=this.href+'?dataset=Anatomic&vr=0&load=0';return false;" href="visualization.html">Complete Connectome</a>
+        <a onclick="location.href=this.href+'?dataset=Demo1&vr=0&load=0';return false;" href="visualization.html">Demo 1</a>
     </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=BetweennessCoeff&vr=0&load=0';return false;" href="visualization.html">Betweenness</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Cluster&vr=0&load=0';return false;" href="visualization.html">Cluster</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Embeddedness&vr=0&load=0';return false;" href="visualization.html">Embeddedness</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=NodalPL&vr=0&load=0';return false;" href="visualization.html">Nodal PL</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=RandomRemoval&vr=0&load=0';return false;" href="visualization.html">Random Removal</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=RichClub&vr=0&load=0';return false;" href="visualization.html">Rich Club</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Strength&vr=0&load=0';return false;" href="visualization.html">Strength</a>
-    </li>
-</ul>
-
-<h2>Functional Connectome</h2>
-
-<h3>Version 2</h3>
-<ul>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Controlled_v2&vr=0&load=0';return false;" href="visualization.html">Controlled</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Diseased_v2&vr=0&load=0';return false;" href="visualization.html">Depressed</a>
-    </li>
-</ul>
-
-<h3>Version 2 - Age Matched</h3>
-<ul>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Controlled_v2_am&vr=0&load=0';return false;" href="visualization.html">Controlled</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Diseased_v2_am&vr=0&load=0';return false;" href="visualization.html">Depressed</a>
-    </li>
-</ul>
-
-
-<h3>Version 3</h3>
-<ul>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Controlled_v3&vr=0&load=0';return false;" href="visualization.html">Controlled</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Diseased_v3&vr=0&load=0';return false;" href="visualization.html">Depressed</a>
-    </li>
-</ul>
-
-
-<h3>Version 3 - Age Matched</h3>
-<ul>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Controlled_v3_am&vr=0&load=0';return false;" href="visualization.html">Controlled</a>
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Diseased_v3_am&vr=0&load=0';return false;" href="visualization.html">Depressed</a>
-    </li>
-</ul>
-
-
-
-<h3>Version 4 - Age Matched - No Dijkstra</h3>
-<ul>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Controlled_v4&vr=0&load=0';return false;" href="visualization.html">Controlled</a>
-
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Diseased_v4&vr=0&load=0';return false;" href="visualization.html">Depressed</a>
-    </li>
-</ul>
-
-
-<h3>Signed Coupling Vector</h3>
-<ul>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=controlled_signed_coupling&vr=0&load=0';return false;" href="visualization.html">Controlled</a>
-
-    </li>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=Diseased_signed_coupling&vr=0&load=0';return false;" href="visualization.html">Depressed</a>
-    </li>
-</ul>
-
-
-
-
-
-
-<h2>WB2</h2>
-<ul>
-    <li>
-        <a onclick="location.href=this.href+'?dataset=WB2_1&vr=0&load=0';return false;" href="visualization.html">Series 1</a>
-    </li>
-
 </ul>
 
 </body>
