--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@ This research is being done in collaboration with Alex Leow, Olusola Ajilore, an
 <ul>
     <li>
         <a onclick="location.href=this.href+'?dataset=Demo1&vr=0&load=0';return false;" href="visualization.html">Demo 1</a>
+        &nbsp&nbsp&nbsp
+        <a onclick="location.href=this.href+'?dataset=Demo1&vr=1&load=0';return false;" href="visualization.html">Oculus V1</a>
+        &nbsp&nbsp&nbsp
+        <a onclick="location.href=this.href+'?dataset=Demo1&vr=2&load=0';return false;" href="visualization.html">Oculus V2</a>
     </li>
 </ul>
 
